--- a/index.html
+++ b/index.html
@@ -196,6 +196,56 @@
                 <input type="text" placeholder="What's on your mind, Diana?" id="create-post">
                 <input type="submit" value="Post" class="btn btn-primary">
             </form>
+            <!-- ==feeds== -->
+            <div class="feeds">
+                <div class="feed">
+                    <div class="head">
+                        <div class="user">
+                            <div class="profile-pic">
+                                <img src="images/profile-13.jpg">
+                            </div>
+                            <div class="ingo">
+                                <h3>Lana Rose</h3>
+                                <small>Dubai, 15 MINUTES AGO</small>
+                            </div>
+                            <span class="edit">
+                                <i class="fa-solid fa-ellipsis"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="photo">
+                        <img src="images/feed-1.jpg">
+                    </div>
+                    <div class="action-button">
+                        <div class="interaction-buttons">
+                            <span>
+                                <i class="fa-regular fa-heart"></i>
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-comment-dots"></i>
+                            </span>
+                            <span>
+                                <i class="fa-regular fa-share-from-square"></i>
+                            </span>
+                        </div>
+                        <div class="bbokmark">
+                            <span>
+                                <i class="fa-regular fa-bookmark"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="liked-by">
+                        <span><img src="images/profile-10.jpg"></span> <span><img src="images/profile-4.jpg"></span> <span><img src="images/profile-15.jpg"></span>
+                        <p>Likeed by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+                    </div>
+                    <div class="caption">
+                        <p><b>Lana Rose</b>Lorem ipsum dolor sit amet consectetur adipisicing. <span class="harsh-tag">#lifestyle</span></p>
+                    </div>
+                    <div class="tex-muted comments">
+                        View all 277 comments
+                    </div>
+                </div>
+            </div>
 
             </div>
 
