--- a/index.html
+++ b/index.html
@@ -605,6 +605,30 @@
                     <!--end of messages  -->
 
                     <!-- friend requests -->
+                    <div class="friend-requests">
+                        <h4>Requests</h4>
+                        <div class="request">
+                            <div class="info">
+                                <div class="profile-pic">
+                                    <img src="images/profile-13.jpg">
+                                </div>
+                                <div>
+                                    <h5>Hajia Bintu</h5>
+                                    <p class="text-muted">
+                                        8 mutual friends
+                                    </p>
+                                    <div class="action">
+                                        <button class="btn btn-primary">
+                                            Accept
+                                        </button>
+                                        <button class="btn">
+                                            Decline
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
             </div>
         </div>
