--- a/index.html
+++ b/index.html
@@ -594,13 +594,72 @@
                 <!-- message -->
                 <div class="message">
                     <div class="profile-pic">
-                        <img src="images/profile-17.jpg">
+                        <img src="images/profile-2.jpg">
                     </div>
                     <div class="message-body">
                         <h5>Edem Quist</h5>
-                        <p class="texxt-muted">Just woke up bruh</p>
+                        <p class="text-muted">Just woke up bruh</p>
                     </div>
                 </div>
+
+
+                <div class="message">
+                    <div class="profile-pic">
+                        <img src="images/profile-3.jpg">
+                        <div class="active"></div>
+                    </div>
+                    <div class="message-body">
+                        <h5>Franca Deila</h5>
+                        <p class="text-muted">Received bruh. Thanks!</p>
+                    </div>
+                </div>
+
+
+                <div class="message">
+                    <div class="profile-pic">
+                        <img src="images/profile-4.jpg">
+                    </div>
+                    <div class="message-body">
+                        <h5>Jane Doe</h5>
+                        <p class="text-muted">ok</p>
+                    </div>
+                </div>
+
+                <div class="message">
+                    <div class="profile-pic">
+                        <img src="images/profile-5.jpg">
+                    </div>
+                    <div class="message-body">
+                        <h5>Daniella Jackson</h5>
+                        <p class="text-bold">2 new messages</p>
+                    </div>
+                </div>
+
+
+                <div class="message">
+                    <div class="profile-pic">
+                        <img src="images/profile-6.jpg">
+                    </div>
+                    <div class="message-body">
+                        <h5>Juliet Makarey</h5>
+                        <p class="text-muted">lol u right</p>
+                    </div>
+                </div>
+
+
+                <div class="message">
+                    <div class="profile-pic">
+                        <img src="images/profile-7.jpg">
+                        <div class="active"></div>
+                    </div>
+                    <div class="message-body">
+                        <h5>Chantel Msiza</h5>
+                        <p class="text-bold">Birthday Tomorrow!</p>
+                    </div>
+                </div>
+
+
+                
             </div>
                     <!--end of messages  -->
 
@@ -617,20 +676,66 @@
                                     <p class="text-muted">
                                         8 mutual friends
                                     </p>
-                                    <div class="action">
-                                        <button class="btn btn-primary">
-                                            Accept
-                                        </button>
-                                        <button class="btn">
-                                            Decline
-                                        </button>
-                                    </div>
                                 </div>
+                            </div>
+                            <div class="action">
+                                <button class="btn btn-primary">
+                                    Accept
+                                </button>
+                                <button class="btn">
+                                    Decline
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="request">
+                            <div class="info">
+                                <div class="profile-pic">
+                                    <img src="images/profile-9.jpg">
+                                </div>
+                                <div>
+                                    <h5>Jackline Mensah</h5>
+                                    <p class="text-muted">
+                                        2 mutual friends
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="action">
+                                <button class="btn btn-primary">
+                                    Accept
+                                </button>
+                                <button class="btn">
+                                    Decline
+                                </button>
+                            </div>
+                        </div>
+
+                        <div class="request">
+                            <div class="info">
+                                <div class="profile-pic">
+                                    <img src="images/profile-10.jpg">
+                                </div>
+                                <div>
+                                    <h5>Jennifer Lawrence</h5>
+                                    <p class="text-muted">
+                                        19 mutual friends
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="action">
+                                <button class="btn btn-primary">
+                                    Accept
+                                </button>
+                                <button class="btn">
+                                    Decline
+                                </button>
                             </div>
                         </div>
                     </div>
 
             </div>
+
+            <!-- End of Right -->
         </div>
     </main>
     
