--- a/index.html
+++ b/index.html
@@ -738,6 +738,73 @@
             <!-- End of Right -->
         </div>
     </main>
+<!-- ==============theme customization============== -->
+
+<div class="customize-theme">
+    <div class="card">
+        <h2>Customize your view</h2>
+        <p class="text-muted">Manage your font size, color, and background.</p>
+        <!-- -----font size----- -->
+        <div class="font-size">
+            <h4>Font Size</h4>
+        <div>
+        <h6>Aa</h6>
+        <div class="choose-size">
+            <span class="font-size-1"></span>
+            <span class="font-size-2"></span>
+            <span class="font-size-3"></span>
+            <span class="font-size-4"></span>
+            <span class="font-size-5"></span>
+        </div>
+        <h3>Aa</h3>
+    </div>
+</div>
+
+
+<!-------------PRIMARY COLORS--------------->
+    <div class="color">
+        <h4>Color</h4>
+        <div class="chose-color">
+            <span class="color-1 active"></span>
+            <span class="color-2"></span>
+            <span class="color-3"></span>
+            <span class="color-4"></span>
+            <span class="color-5"></span>
+        </div>
+    </div>
+
+    <!---------BACKGROUND COLORS----------->
+    <div class="background">
+        <h4>Background</h4>
+        <div class="choose-bg">
+            <div class="bg-1">
+                <span></span>
+                <h5 for="bg-1">Light</h5>
+            </div>
+            <div class="bg-2">
+                <span></span>
+                <h5>Dim</h5>
+            </div>
+            <div class="gb-3">
+                <span></span>
+                <h5 for="gb-3">Lights Out</h5>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
     
 <script src="index.js"></script>
 </body>
