--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
         <h6>Aa</h6>
         <div class="choose-size">
             <span class="font-size-1"></span>
-            <span class="font-size-2"></span>
+            <span class="font-size-2 active"></span>
             <span class="font-size-3"></span>
             <span class="font-size-4"></span>
             <span class="font-size-5"></span>
@@ -766,7 +766,7 @@
         <h4>Color</h4>
         <div class="chose-color">
             <span class="color-1 active"></span>
-            <span class="color-2"></span>
+            <span class="color-2 "></span>
             <span class="color-3"></span>
             <span class="color-4"></span>
             <span class="color-5"></span>
@@ -777,7 +777,7 @@
     <div class="background">
         <h4>Background</h4>
         <div class="choose-bg">
-            <div class="bg-1">
+            <div class="bg-1 active">
                 <span></span>
                 <h5 for="bg-1">Light</h5>
             </div>
@@ -785,7 +785,7 @@
                 <span></span>
                 <h5>Dim</h5>
             </div>
-            <div class="gb-3">
+            <div class="bg-3">
                 <span></span>
                 <h5 for="gb-3">Lights Out</h5>
             </div>
