JS open and close customize window

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                <a class="menu-item" id="messages-notifications"> <span><i class="fa-solid fa-envelope"><small class="notification-count">6</small></i></span><h3>Messages</h3> </a>
                <a class="menu-item"> <span><i class="fa-solid fa-bookmark"></i></span><h3>Bookmark</h3>  </a>
                <a class="menu-item"> <span><i class="fa-solid fa-chart-line"></i></span><h3>Analytics</h3>  </a>
-               <a class="menu-item"> <span><i class="fa-solid fa-palette"></i></span><h3>Theme</h3> </a>
+               <a class="menu-item" id="theme"> <span><i class="fa-solid fa-palette"></i></span><h3>Theme</h3> </a>
                <a class="menu-item active"> <span><i class="fa-solid fa-gear"></i></span><h3>Settings</h3> </a>
                   
                 </div>
